appId: com.workoutjournal
---
- launchApp:
    clearState: true
- tapOn: 'Sign In'
- tapOn: 'History'
- assertVisible: '0 exercises'
- tapOn: '+ Create workout'
- assertVisible: 'exercises'
